# Roset

./: .gitignore  LICENSE  README.md  README_AUDIT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: csi-ci.yml  docs-ci.yml  docs-preview.yml  go-cli-ci.yml  python-ci.yml  release.yml  rust-ci.yml  ts-sdk-ci.yml
agent/: Dockerfile
cli/: CLI_ARCHITECTURE.md  README.md  go.mod  go.sum  main.go
cli/cmd/: completion.go  debug.go  doctor.go  login.go  logout.go  mount.go  mount_unix.go  mount_windows.go  root.go  status.go  unmount.go  version.go
cli/pkg/api/: api.go
cli/pkg/config/: config.go
cli/pkg/output/: output.go
cli/pkg/redact/: redact.go
core/apps/docs/: mdx-components.tsx  next.config.js  package.json  theme.config.tsx  tsconfig.json
core/apps/docs/components/: InstallInCursor.tsx  MDXComponents.tsx
core/apps/docs/components/ui/: Accordion.module.css  Accordion.tsx  Alert.module.css  ApiDocs.module.css  ApiDocs.tsx  Badge.module.css  Button.tsx  Card.module.css  CodeBlock.module.css  CodeBlock.tsx  Table.module.css  Table.tsx  index.ts
core/apps/docs/pages/: _app.tsx  _meta.json  agent.mdx  changelog.mdx  concepts.mdx  index.mdx  quickstart.mdx
core/apps/docs/pages/api-reference/: _meta.json  audit.mdx  index.mdx  leases.mdx  mounts.mdx  nodes.mdx  search.mdx  shares.mdx  uploads.mdx
core/apps/docs/pages/concepts/: index.mdx
core/apps/docs/pages/guides/: _meta.json  (+10 more)
core/apps/docs/public/: sitemap.xml
core/apps/docs/styles/: globals.css
core/apps/docs/utils/: promptLinks.ts
csi/: CSI_ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md
csi/deploy/: controller-statefulset.yaml  node-daemonset.yaml  storageclass.yaml
csi/src/: controller.rs  identity.rs  main.rs  node.rs  supervisor.rs
deploy/charts/roset-csi/: Chart.yaml  values.yaml
deploy/charts/roset-csi/templates/: _helpers.tpl  daemonset.yaml  rbac.yaml  serviceaccount.yaml  statefulset.yaml  storage.yaml
deploy/kubernetes/: csi-driver.yaml  daemonset.yaml
docs/: .gitignore  mdx-components.tsx  next-sitemap.config.js  next.config.ts  package.json  theme.config.tsx
docs/app/: globals.css  layout.tsx  not-found.tsx  sitemap.ts
docs/app/docs/: layout.tsx  page.mdx
docs/app/docs/changelog/: page.mdx
docs/components/: PromptActions.tsx  accordion.tsx  breadcrumbs.tsx  callout.tsx  cards.tsx  code-block.tsx  edit-link.tsx  file-tree.tsx  link-card.tsx  mobile-sidebar.tsx  pagination.tsx  prompt-card.tsx  sdk-selector.tsx  search.tsx  sidebar.tsx  site-title.tsx  snippet-menu.tsx  steps.tsx  tabs.tsx  theme-toggle.tsx  toc.tsx
docs/components/ui/: Alert.tsx  Badge.tsx  Button.module.css  Card.tsx  ChangeItem.module.css  ChangeItem.tsx  index.ts
docs/components/ui/Toast/: ToastContainer.tsx
docs/lib/: navigation.ts  sdk-preference.tsx
docs/pages/: _app.tsx  _meta.json  changelog.mdx
docs/pages/guides/: agent.mdx  billing.mdx  high-performance-compute.mdx  leases.mdx  python-sdk.mdx  retention.mdx  search.mdx  webhooks.mdx
docs/pages/reference/: cli.mdx  errors.mdx  fuse.mdx  semantics.mdx
docs/pages/reference/api/: _meta.json  audit.mdx  billing.mdx  index.mdx  integrations.mdx  leases.mdx  ml.mdx  mounts.mdx  nodes.mdx  notifications.mdx  org.mdx  search.mdx  shares.mdx  tenant.mdx  uploads.mdx  user.mdx  webhooks.mdx
docs/pages/start/: quickstart.mdx
docs/public/: robots.txt  search-index.json
docs/public/pagefind/: pagefind.unknown_5169743af2dfc34.pf_meta  pagefind.unknown_53be3fed80efe08.pf_meta  pagefind.unknown_b591296def8fc8a.pf_meta
docs/public/pagefind/fragment/: unknown_1d5d8d7.pf_fragment  unknown_1d8423d.pf_fragment  unknown_21e16be.pf_fragment  unknown_22b6811.pf_fragment  unknown_2a72809.pf_fragment  unknown_337a938.pf_fragment  unknown_511ca59.pf_fragment  unknown_521de9e.pf_fragment  unknown_6be391b.pf_fragment  unknown_7f8973b.pf_fragment  unknown_98e9877.pf_fragment  unknown_99aef1c.pf_fragment  unknown_9c93123.pf_fragment  unknown_a7eaa3e.pf_fragment  unknown_ac857fc.pf_fragment  unknown_b63431f.pf_fragment  unknown_bd17b4c.pf_fragment  unknown_bd70a24.pf_fragment  unknown_d92f4fe.pf_fragment  unknown_db36493.pf_fragment  unknown_f0a6965.pf_fragment
docs/public/pagefind/index/: unknown_1a2c727.pf_index  unknown_218db85.pf_index  unknown_9e2ae88.pf_index
docs/scripts/: build-search-index.mjs
docs/styles/: globals.css
fuse/: Cargo.toml  FUSE_ARCHITECTURE.md  README.md
fuse/src/: cache.rs  client.rs  config.rs  fs.rs  inode.rs  main.rs  staging.rs
fuse/src/client/: error.rs  mod.rs  models.rs
sdk/: SDK_ARCHITECTURE.md
sdk/python/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
sdk/python/src/roset/: __init__.py  admin.py  client.py  exceptions.py  http_client.py  models.py
sdk/python/src/roset/integrations/: __init__.py  huggingface.py  pytorch.py  ray.py  torchelastic.py
sdk/python/src/roset/resources/: audit.py  billing.py  commits.py  integrations.py  mounts.py  nodes.py  org.py  refs.py  search.py  shares.py  uploads.py  webhooks.py
sdk/python/tests/: test_admin.py  test_client.py  test_huggingface.py  test_pytorch.py  test_ray.py
sdk/typescript/: .gitignore  CHANGELOG.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk/typescript/src/: admin-index.ts  admin.ts  admin_index.ts  client.test.ts  client.ts  errors.test.ts  errors.ts  http.ts  index.test.ts  index.ts  pagination.ts  types.ts
sdk/typescript/src/resources/: analytics.test.ts  analytics.ts  api-keys.test.ts  api-keys.ts  audit.ts  billing.ts  commits.ts  connections.test.ts  connections.ts  files.test.ts  files.ts  integrations.ts  jobs.test.ts  jobs.ts  leases.ts  mounts.ts  nodes.test.ts  nodes.ts  notifications.ts  org.ts  provider-keys.test.ts  provider-keys.ts  qa.ts  refs.ts  search.ts  shares.ts  spaces.test.ts  spaces.ts  tenant.ts  uploads.ts  user.ts  webhooks.test.ts  webhooks.ts
sdk/typescript/src/types/: index.ts  variants.ts
sdk/typescript/tests/: webhooks.test.ts
sdk/typescript/tests/fixtures/: test-env.ts
sdk/typescript/tests/helpers/: mock-http.ts
(+63 files in other folders)
