[package]
name = "roset-csi"
version = "0.1.0"
edition = "2021"
authors = ["Roset <hello@roset.dev>"]
description = "Kubernetes CSI Driver for Roset"
license = "Apache-2.0"
repository = "https://github.com/Roset-dev/roset"

[dependencies]
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"

[build-dependencies]
tonic-build = "0.10"

