[package]
name = "roset-fuse"
version = "0.1.0"
edition = "2021"
authors = ["Roset <hello@roset.dev>"]
description = "FUSE filesystem client for Roset"
license = "Apache-2.0"
repository = "https://github.com/Roset-dev/roset"

[dependencies]
# FUSE bindings
fuser = "0.14"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Caching
lru = "0.12"
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Signal handling
ctrlc = "3"
tempfile = "3"
tokio-util = { version = "0.7", features = ["io"] }
libc = "0.2"

[dev-dependencies]

[[bin]]
name = "roset-fuse"
path = "src/main.rs"
