[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roset"
version = "0.1.0"
description = "Atomic checkpoints for ML training. Never lose a checkpoint again."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Roset Team", email = "hello@roset.dev" }
]
keywords = [
    "roset",
    "s3",
    "object-storage",
    "filesystem",
    "ml",
    "checkpoints",
    "pytorch",
    "huggingface",
    "ray",
    "atomic",
    "training",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Filesystems",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
pytorch = [
    "pytorch-lightning>=2.0.0",
    "torch>=2.0.0",
]
huggingface = [
    "transformers>=4.30.0",
]
ray = [
    "ray[train]>=2.0.0",
]
all = [
    "pytorch-lightning>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "ray[train]>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://roset.dev"
Documentation = "https://docs.roset.dev"
Repository = "https://github.com/Roset-dev/roset"
Changelog = "https://github.com/Roset-dev/roset/blob/main/sdk/python/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Roset-dev/roset/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/roset"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["roset"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
