[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roset"
version = "0.1.2"
description = "Roset Python SDK -- Unstructured-to-Structured Transformation Engine"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Roset Team", email = "hello@roset.dev" }
]
keywords = [
    "roset",
    "document-processing",
    "transformation-engine",
    "embeddings",
    "markdown-extraction",
    "unstructured-data",
    "file-processing",
    "ai",
    "sdk",
    "api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://roset.dev"
Documentation = "https://docs.roset.dev"
Repository = "https://github.com/Roset-dev/roset"
Changelog = "https://github.com/Roset-dev/roset/blob/main/sdk/python/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Roset-dev/roset/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/roset"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["roset"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
